--- a/summary.html
+++ b/summary.html
@@ -87,7 +87,7 @@
         <!-- main-content-div-start -->
         <div class="bostami-page-area z-index-3">
             <div class="container">
-                <div class="bostami-page-wrap pt-60 pl-80 pr-80">
+                <div class="bostami-page-wrap pt-60 pl-80 pr-80 pb-60">
 
                     <!-- page-title -->
                     <div class="page-tilte-2-wrap">
@@ -98,7 +98,7 @@
 
                                     <!-- tableau-synthèse-button -->
                                     <div class="bostami-parsonal-info-btn">
-                                        <a class="btn-2 circle" href="assets/img/personal-info/cv-eliane-perol.pdf" target="_blank">
+                                        <a class="btn-2 circle" href="assets/docs/tableau-synthese-competences.pdf" target="_blank">
                                             <span class="icon"><i class="fa-regular fa-download"></i></span>Tableau de Synthèse (Annexe 6-1)</a>
                                     </div>
                                     
@@ -111,75 +111,99 @@
                     <table>
                         <thead>
                             <tr>
-                                <th><h4 class="section-title">Nom</h4></th>
-                                <th>Compétences</h4></th>
-                                <th><h4 class="section-title">Sous-Compétences</h4></th>
+                                <th class="bostami-contact-item"><h5 class="section-title">Nom</h5></th>
+                                <th class="bostami-contact-item left"><h5 class="section-title">Compétences</h5></th>
+                                <th class="bostami-contact-item left"><h5 class="section-title">Sous-Compétences</h5></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th class = "catkrill-table"><span><i class="fa-regular fa-newspaper"></i> Mission 1</span></th>
-                                <td class = "pkgd-table">Compétence associée 1 <br>
-                                    Compétence associée 2</td>
-                                <td class = "catkrill-table">Sous-compétence associée 1.1 <br>
-                                    Sous-compétence associée 1.2 <br>
+                                <th class = "catkrill-table bostami-contact-item"><span></span><i class="fa-regular fa-newspaper"></i> Mission 1</span></th>
+                                <td class = "catkrill-table bostami-contact-item">
+                                    Compétence associée 1 <br><br>
+                                    Compétence associée 2
+                                </td>
+                                <td class = "catkrill-table bostami-contact-item">
+                                    Sous-compétence associée 1.1 <br>
+                                    Sous-compétence associée 1.2 <br><br>
                                     Sous-compétence associée 2.1 <br>
-                                    Sous-compétence associée 2.2</td>
+                                    Sous-compétence associée 2.2
+                                </td>
                             </tr>
                             <tr>
-                                <th class = "pkgd-table"><span><i class="fa-regular fa-newspaper"></i> Mission 2</span></th>
-                                <td class = "catkrill-table">Compétence associée 1 <br>
-                                    Compétence associée 2</td>
-                                <td class = "pkgd-table">Sous-compétence associée 1.1 <br>
-                                    Sous-compétence associée 1.2 <br>
+                                <th class = "pkgd-table bostami-contact-item"><span><i class="fa-regular fa-newspaper"></i> Mission 2</span></th>
+                                <td class = "pkgd-table bostami-contact-item">
+                                    Compétence associée 1 <br><br>
+                                    Compétence associée 2
+                                </td>
+                                <td class = "pkgd-table bostami-contact-item">
+                                    Sous-compétence associée 1.1 <br>
+                                    Sous-compétence associée 1.2 <br><br>
                                     Sous-compétence associée 2.1 <br>
-                                    Sous-compétence associée 2.2</td>
+                                    Sous-compétence associée 2.2
+                                </td>
                             </tr>
                             <tr>
-                                <th class = "catkrill-table"><span><i class="fa-regular fa-newspaper"></i> Mission 3</span></th>
-                                <td class = "pkgd-table">Compétence associée 1 <br>
-                                    Compétence associée 2</td>
-                                <td class = "catkrill-table">Sous-compétence associée 1.1 <br>
-                                    Sous-compétence associée 1.2 <br>
+                                <th class = "catkrill-table bostami-contact-item"><span><i class="fa-regular fa-newspaper"></i> Mission 3</span></th>
+                                <td class = "catkrill-table bostami-contact-item">
+                                    Compétence associée 1 <br><br>
+                                    Compétence associée 2
+                                </td>
+                                <td class = "catkrill-table bostami-contact-item">
+                                    Sous-compétence associée 1.1 <br>
+                                    Sous-compétence associée 1.2 <br><br>
                                     Sous-compétence associée 2.1 <br>
-                                    Sous-compétence associée 2.2</td>
+                                    Sous-compétence associée 2.2
+                                </td>
                             </tr>
                             <tr>
-                                <th class = "pkgd-table"><span><i class="fa-regular fa-briefcase"></i> Projet 1</span></th>
-                                <td class = "catkrill-table">Compétence associée 1 <br>
-                                    Compétence associée 2</td>
-                                <td class = "pkgd-table">Sous-compétence associée 1.1 <br>
-                                    Sous-compétence associée 1.2 <br>
+                                <th class = "pkgd-table bostami-contact-item"><span><i class="fa-regular fa-briefcase"></i> Projet 1</span></th>
+                                <td class = "pkgd-table bostami-contact-item">
+                                    Compétence associée 1 <br><br>
+                                    Compétence associée 2
+                                </td>
+                                <td class = "pkgd-table bostami-contact-item">
+                                    Sous-compétence associée 1.1 <br>
+                                    Sous-compétence associée 1.2 <br><br>
                                     Sous-compétence associée 2.1 <br>
-                                    Sous-compétence associée 2.2</td>
+                                    Sous-compétence associée 2.2
+                                </td>
                             </tr>
                             <tr>
-                                <th class = "catkrill-table"><span><i class="fa-regular fa-briefcase"></i> Projet 2</span></th>
-                                <td class = "pkgd-table">Compétence associée 1 <br>
+                                <th class = "catkrill-table bostami-contact-item"><span><i class="fa-regular fa-briefcase"></i> Projet 2</span></th>
+                                <td class = "catkrill-table bostami-contact-item">
+                                    Compétence associée 1 <br><br>
                                     Compétence associée 2</td>
-                                <td class = "catkrill-table">Sous-compétence associée 1.1 <br>
-                                    Sous-compétence associée 1.2 <br>
+                                <td class = "catkrill-table bostami-contact-item">
+                                    Sous-compétence associée 1.1 <br>
+                                    Sous-compétence associée 1.2 <br><br>
                                     Sous-compétence associée 2.1 <br>
-                                    Sous-compétence associée 2.2</td>
+                                    Sous-compétence associée 2.2
+                                </td>
                             </tr>
                             <tr>
-                                <th class = "pkgd-table"><span><i class="fa-regular fa-briefcase"></i> Projet 3</span></th>
-                                <td class = "catkrill-table">Compétence associée 1 <br>
-                                    Compétence associée 2</td>
-                                <td class = "pkgd-table">Sous-compétence associée 1.1 <br>
-                                    Sous-compétence associée 1.2 <br>
+                                <th class = "pkgd-table bostami-contact-item"><span><i class="fa-regular fa-briefcase"></i> Projet 3</span></th>
+                                <td class = "pkgd-table bostami-contact-item">
+                                    Compétence associée 1 <br><br>
+                                    Compétence associée 2
+                                </td>
+                                <td class = "pkgd-table bostami-contact-item">
+                                    Sous-compétence associée 1.1 <br>
+                                    Sous-compétence associée 1.2 <br><br>
                                     Sous-compétence associée 2.1 <br>
-                                    Sous-compétence associée 2.2</td>
+                                    Sous-compétence associée 2.2
+                                </td>
                             </tr>
                         </tbody>
                     </table>
-                    <!-- skills-table-end
-                     -->
-                    <div class="bostami-resume-2">
-                        <div class="row">
+                    <!-- skills-table-end -->
+
+
+                    <!-- <div class="bostami-resume-2">
+                        <div class="row"> -->
                             
                             <!-- nom-start -->
-                            <div class="col-xl-4 col-lg-6 col-md-6">
+                            <!-- <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="bostami-section-title-wrap mb-20">
                                     <h4 class="section-title"><i class="fa-light fa-school"></i>Nom</h4>
                                 </div>
@@ -216,11 +240,11 @@
                                     </div>
                                 </div>
 
-                            </div>
+                            </div> -->
                             <!-- nom-end -->
 
                             <!-- competence-start -->
-                            <div class="col-xl-4 col-lg-6 col-md-6">
+                            <!-- <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="bostami-section-title-wrap mb-20">
                                     <h4 class="section-title"><i class="fa-light fa-briefcase"></i>Compétences</h4>
                                 </div>
@@ -258,11 +282,11 @@
                                     </div>
 
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- competence-end -->
 
                             <!-- sous-competence-start -->
-                            <div class="col-xl-4 col-lg-6 col-md-6">
+                            <!-- <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="bostami-section-title-wrap mb-20">
                                     <h4 class="section-title"><i class="fa-light fa-award"></i>Sous-Compétences</h4>
                                 </div>
@@ -300,11 +324,11 @@
                                     </div>
 
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- sous-competence-end -->
 
-                        </div>
-                    </div>             
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
