--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Eliane Perol - Portfolio</title>
+    <title>Eliane Perol - Portfolio - BTS SIO</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/laptop-code-solid.png">
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="page-wrapper page-wrapper-2" data-background="assets/img/bg/page-bg-1.jpg"></div>
+    <div class="page-wrapper page-wrapper-2" data-background="assets/img/bg/page-bg-1.jpg">
 
         <!-- header-start -->
         <header class="bostami-header-area mb-30 z-index-5">
@@ -37,7 +37,7 @@
                                     <nav class="bastami-main-menu main_menu_2">
                                         <ul>
                                             <li class="active">
-                                                <a href="index.html"> <span><i class="fa-light fa-house"></i></span> Accueil </a>
+                                                <a href="index.html"><span><i class="fa-light fa-house"></i></span> Accueil</a>
                                             </li>
                                             <li>
                                                 <a href="projects.html"><span><i class="fa-light fa-briefcase"></i></span> Projets</a>
@@ -119,12 +119,8 @@
 
                             <!-- cv button -->
                             <div class="bostami-parsonal-info-btn">
-                                <a class="btn-2 circle" href="assets/img/personal-info/cv-eliane-perol.pdf" target="_blank">
-                                    <span class="icon">
-                                        <i class="fa-regular fa-download"></i>
-                                    </span>
-                                    Téléchargement CV
-                                </a>
+                                <a class="btn-2 circle" href="assets/docs/cv-eliane-perol.pdf" target="_blank">
+                                    <span class="icon"><i class="fa-regular fa-download"></i></span> Téléchargement CV</a>
                             </div>
 
                         </div>
@@ -177,7 +173,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <p>SecNum académie</p>
-                                                        <span><a href="assets/img/personal-info/cv-eliane-perol.pdf" target="_blank">
+                                                        <span><a href="assets/docs/certif1.pdf" target="_blank">
                                                                 <i class="fa-light fa-file-certificate"></i>
                                                             Attestation
                                                         </a></span>
@@ -191,7 +187,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <p>CNIL : RGPD</p>
-                                                        <span><a href="assets/img/personal-info/cv-eliane-perol.pdf" target="_blank">
+                                                        <span><a href="assets/docs/certif2.pdf" target="_blank">
                                                                 <i class="fa-light fa-file-certificate"></i>
                                                             Attestation
                                                         </a></span>
@@ -205,7 +201,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <p>DRSD Secret Defense</p>
-                                                        <span><a href="assets/img/personal-info/cv-eliane-perol.pdf" target="_blank">
+                                                        <span><a href="assets/docs/certif3.pdf" target="_blank">
                                                                 <i class="fa-light fa-file-certificate"></i>
                                                             Attestation
                                                         </a></span>
@@ -219,7 +215,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <p>PIX</p>
-                                                        <span><a href="assets/img/personal-info/cv-eliane-perol.pdf" target="_blank">
+                                                        <span><a href="assets/docs/certif4.pdf" target="_blank">
                                                                 <i class="fa-light fa-file-certificate"></i>
                                                             Attestation
                                                         </a></span>
@@ -293,7 +289,7 @@
             </div>
         </div>
         <!-- main-content-div-end -->
-        
+
         <!-- footer-start -->
         <div class="bostami-page-area z-index-3">
             <div class="container">
@@ -321,6 +317,7 @@
         </div>
         <!-- footer-end -->
 
+    </div>
     </div>
 
     <!-- JS here -->
