--- a/legal.html
+++ b/legal.html
@@ -98,178 +98,93 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- education -->
+                    
+                    <p> Les présentes conditions générales fixent les modalités d’utilisation du service web https://elianeperol.fr<br><br>
+                        L’utilisateur reconnait avoir pris connaissance de ce document et accepté l’ensemble de ces informations, que cet usage soit fait à titre personnel 
+                        ou professionnel. Si cet usage est fait à titre professionnel, l’utilisateur garantit détenir les pouvoirs nécessaires pour accepter ces conditions 
+                        générales au sein de son organisation.
+                    </p>
+                    <br>
+            
                     <div class="bostami-resume-2">
-                        <div class="row">
-
-                            <div class="col-xl-4 col-lg-6 col-md-6">
-                                <div class="bostami-section-title-wrap mb-20">
-                                    <h4 class="section-title"><i class="fa-light fa-school"></i>
-                                        Education</h4>
-                                </div>
-
-                                <div class="bostami-card-wrap mb-50">
-                                    <div class="bostami-card-item bg-prink mb-20">
-                                        <span class="card-subtitle">2021-2024</span>
-                                        <h6 class="card-title">Ph.D in Horriblensess <span>- University,</span></h6>
-                                        <p class="card-text">Los Angeles, CA</p>
-                                    </div>
-
-                                    <div class="bostami-card-item bg-catkrill mb-20">
-                                        <span class="card-subtitle">2017-2021</span>
-                                        <h6 class="card-title">Computer Science <span>- Imperialize</span></h6>
-                                        <p class="card-text">Technical Institute</p>
-                                    </div>
-
-                                    <div class="bostami-card-item bg-prink">
-                                        <span class="card-subtitle">2015-2017</span>
-                                        <h6 class="card-title">Graphic Designer <span>- Web Graphy,</span></h6>
-                                        <p class="card-text">Los Angeles, CA</p>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="col-xl-4 col-lg-6 col-md-6">
-                                <div class="bostami-section-title-wrap mb-20">
-                                    <h4 class="section-title"><i class="fa-light fa-briefcase"></i>experience</h4>
-                                </div>
-
-                                <div class="bostami-card-wrap mb-50">
-
-                                    <div class="bostami-card-item bg-catkrill  mb-20">
-                                        <span class="card-subtitle">2019 - Present</span>
-                                        <h6 class="card-title">Sr. Software Tester</h6>
-                                        <p class="card-text">Google Inc.</p>
-                                    </div>
-
-                                    <div class="bostami-card-item bg-prink mb-20">
-                                        <span class="card-subtitle">2015-2017</span>
-                                        <h6 class="card-title">Cr. Web Developer</h6>
-                                        <p class="card-text">elite-themes24 ltd.</p>
-                                    </div>
-
-                                    <div class="bostami-card-item bg-catkrill ">
-                                        <span class="card-subtitle">2014 - 2015</span>
-                                        <h6 class="card-title">Jr. Web Developer</h6>
-                                        <p class="card-text">Creative Gigs.</p>
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                            <div class="col-xl-4 col-lg-6 col-md-6">
-                                <div class="bostami-section-title-wrap mb-20">
-                                    <h4 class="section-title"><i class="fa-light fa-award"></i> Awards
-                                    </h4>
-                                </div>
-
-                                <div class="bostami-card-wrap mb-50">
-
-                                    <div class="bostami-card-item bg-catkrill  mb-20">
-                                        <span class="card-subtitle">2015-2017</span>
-                                        <h6 class="card-title">Graphic Designer</h6>
-                                        <p class="card-text">Web Graphy, Los Angeles, CA</p>
-                                    </div>
-
-                                    <div class="bostami-card-item bg-prink mb-20">
-                                        <span class="card-subtitle">2014 - 2015</span>
-                                        <h6 class="card-title">Jr. Web Developer</h6>
-                                        <p class="card-text">Creative Gigs.</p>
-                                    </div>
-
-                                    <div class="bostami-card-item bg-catkrill ">
-                                        <span class="card-subtitle">2015-2017</span>
-                                        <h6 class="card-title">Best Freelancer</h6>
-                                        <p class="card-text">Fiver & Upwork Level 2 & Top Rated.</p>
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                        </div>
+                        <h5 class="bostami-parsonal-info-title">Éditeur et responsable de publication</h5>
+                        <p>Ce blog personnel non déclaré à la CNIL est édité par Eliane Perol.</p>
+                        <br>
                     </div>
 
-                    <div class="section-wrapper border-redius-20 bg-light-white-2 mt-20  pt-70 pb-60 pl-30 pr-30">
-                        <div class="row">
-
-                            <!-- skill -->
-                            <div class="col-xl-6 col-lg-7">
-                                <div class="bostami-section-title-wrap mb-20">
-                                    <h4 class="section-title">Working Skills</h4>
-                                </div>
-
-                                <div class="skill-bar-wrap">
-
-                                    <div class="skill-bar-item mb-30">
-                                        <div class="title-wrap">
-                                            <h5 class="title">Web Design</h5>
-                                            <span class="count">85%</span>
-                                        </div>
-                                        <div class="progress-bar-wrap">
-                                            <div class="progress-line progress-bg-1" style="width: 85%;">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="skill-bar-item mb-30">
-                                        <div class="title-wrap">
-                                            <h5 class="title">Mobile App</h5>
-                                            <span class="count">55%</span>
-                                        </div>
-                                        <div class="progress-bar-wrap">
-                                            <div class="progress-line progress-bg-2" style="width: 55%;">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="skill-bar-item mb-30">
-                                        <div class="title-wrap">
-                                            <h5 class="title">Illustrator</h5>
-                                            <span class="count">65%</span>
-                                        </div>
-                                        <div class="progress-bar-wrap">
-                                            <div class="progress-line progress-bg-3" style="width: 65%;">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="skill-bar-item">
-                                        <div class="title-wrap">
-                                            <h5 class="title">Photoshope</h5>
-                                            <span class="count">72%</span>
-                                        </div>
-                                        <div class="progress-bar-wrap">
-                                            <div class="progress-line progress-bg-4" style="width: 72%;">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                            <!-- gk -->
-                            <div class="col-xl-6 col-lg-5">
-                                <div class="bostami-section-title-wrap mb-20">
-                                    <h4 class="section-title">Knowledges</h4>
-                                </div>
-
-                                <div class="knowledeges-item-wrap">
-                                    <span class="gk-item">Digital Design</span>
-                                    <span class="gk-item">Marketing</span>
-                                    <span class="gk-item">Communication</span>
-                                    <span class="gk-item">Social Media</span>
-                                    <span class="gk-item">Time Management</span>
-                                    <span class="gk-item">Flexibility</span>
-                                    <span class="gk-item">Print</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="bostami-resume-2">
+                        <h5 class="bostami-parsonal-info-title">Hébergement</h5>
+                        <p>Ce site est hébergé par OVH.com Siège social : 2 rue Kellermann – 59100 Roubaix – France. <br>
+                            Cet hébergeur détient à ce jour les informations personnelles concernant l’auteur de ce site..</p>
+                        <br>
                     </div>
+
+                    <div class="bostami-resume-2">
+                        <h5 class="bostami-parsonal-info-title">Responsabilité</h5>
+                        <p>L’éditeur du site met à disposition un large contenu d’informations gratuit. Il s’assure en permanence de mettre 
+                            les moyens à sa disposition pour s’assurer de la qualité de ces contenus. Toutes les informations indiquées sur 
+                            le site sont données à titre indicatif, et sont susceptibles d’évoluer. Par ailleurs, les renseignements figurant 
+                            sur le site https://elianeperol.fr ne sont pas exhaustifs. Ils sont donnés sous réserve de modifications ayant été 
+                            apportées depuis leur mise en ligne. il advient à l’utilisateur de s’assurer de la pertinence de ces informations 
+                            au regard de sa situation. L’utilisateur s’engage donc à utiliser ces informations sous son entière responsabilité et 
+                            dégage l’éditeur de toute responsabilité à cet égard. Par ailleurs, chaque partenariat est mentionné dans les articles 
+                            concernés et cette transparence est également appliquée sur les réseaux sociaux.</p>
+                        <br>
+                    </div>
+
+                    <div class="bostami-resume-2">
+                        <h5 class="bostami-parsonal-info-title">Limitations contractuelles sur les données techniques.</h5>
+                        <p>Le site utilise la technologie JavaScript. Le site Internet ne pourra être tenu responsable de dommages matériels 
+                            liés à l’utilisation du site. De plus, l’utilisateur du site s’engage à accéder au site en utilisant un matériel 
+                            récent, ne contenant pas de virus et avec un navigateur de dernière génération mis-à-jour</p>
+                        <br>
+                    </div>
+
+                    <div class="bostami-resume-2">
+                        <h5 class="bostami-parsonal-info-title">Propriété intelectuelle</h5>
+                        <p>Eliane Perol est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments 
+                            accessibles sur le site, notamment les textes, images, logo (sauf mentions contraires). Toute reproduction, représentation, 
+                            modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, 
+                            est interdite, sauf autorisation écrite préalable.Toute exploitation non autorisée du site ou de l’un quelconque des éléments 
+                            qu’il contient sera considérée comme constitutive d’une contrefaçon et poursuivie conformément aux dispositions des articles 
+                            L.335-2 et suivants du Code de Propriété Intellectuelle. Cela dit, conformément à l’article L. 122-5 du Code de la propriété 
+                            intellectuelle, les courtes citations du contenu sont autorisées, sous réserve que soient indiqués clairement le nom de l’auteur 
+                            et de la source, par un lien vers une des pages de ce site web.</p>
+                        <br>
+                    </div>
+
+                    <div class="bostami-resume-2">
+                        <h5 class="bostami-parsonal-info-title">Responsabilité dans l’utilisation du service</h5>
+                        <p>L’utilisateur s’engage à ne pas perturber le fonctionnement du service offert sur https://elianeperol.fr de quelque manière que 
+                            ce soit. En particulier, l’utilisateur s’engage à s’abstenir de poster des messages illicites, diffamants ou insultants sur 
+                            tout ou partie du site. Les commentaires déposés par les internautes reflètent exclusivement l’avis de leurs auteurs et demeurent 
+                            sous leur responsabilité. En écrivant des commentaires sur le site, l’internaute accepte de se soumettre aux lois françaises et 
+                            internationales. Tout commentaire à caractère injurieux, diffamatoire, xénophobe, raciste, antisémite, pornographique, révisionniste, 
+                            homophobe, sexiste, d’incitation à la haine, à la violence ou en général tout sujet contraire à la loi et aux valeurs humanistes 
+                            n’est pas accepté. L’administrateur du site se réserve le droit de supprimer sans avertissement tout commentaire dérogeant à cette règle.</p>
+                        <br>
+                    </div>
+
+                    <div class="bostami-resume-2">
+                        <h5 class="bostami-parsonal-info-title">Traitement des données personnelles</h5>
+                        <p>En France, les données personnelles sont notamment protégées par la loi n° 78-87 du 6 janvier 1978, la loi n° 2004-801 du 6 août 2004, 
+                            l’article L. 226-13 du Code pénal et la Directive Européenne du 24 octobre 1995. A l’occasion de l’utilisation du site https://elianeperol.fr, 
+                            peuvent êtres recueillies : l’URL des liens par l’intermédiaire desquels l’utilisateur a accédé au site, le fournisseur d’accès de l’utilisateur, 
+                            l’adresse de protocole Internet (IP) de l’utilisateur. En tout état de cause, les informations personnelles relatives à l’utilisateur ne sont 
+                            collectés que pour le besoin de certains services proposés par le site https://elianeperol.fr. L’utilisateur fournit ces informations en toute 
+                            connaissance de cause, notamment lorsqu’il procède par lui-même à leur saisie. Il est alors précisé à l’utilisateur du site l’obligation ou non 
+                            de fournir ces informations. Conformément aux dispositions des articles 38 et suivants de la loi 78-17 du 6 janvier 1978 relative à l’informatique, 
+                            aux fichiers et aux libertés, tout utilisateur dispose d’un droit d’accès, de rectification et d’opposition aux données personnelles le concernant, 
+                            en effectuant sa demande écrite et signée, accompagnée d’une copie du titre d’identité avec signature du titulaire de la pièce, en précisant 
+                            l’adresse à laquelle la réponse doit être envoyée. Aucune information personnelle de l’utilisateur du site https://elianeperol.fr n’est publiée à 
+                            l’insu de l’utilisateur, échangée, transférée, cédée ou vendue sur un support quelconque à des tiers. Seule l’hypothèse du rachat du site et de 
+                            ses droits permettrait la transmission des dites informations à l’éventuel acquéreur qui serait à son tour tenu de la même obligation de conservation 
+                            et de modification des données vis à vis de l’utilisateur du site https://elianeperol.fr. Le site n’est pas déclaré à la CNIL car il ne recueille pas 
+                            d’informations personnelles. . Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 
+                            du 11 mars 1996 relative à la protection juridique des bases de données.</p>
+                        <br>
+                    </div>
+
                 </div>
             </div>
         </div>
