--- a/missions.html
+++ b/missions.html
@@ -123,89 +123,89 @@
                                     <div class="grid-sizer"></div>
 
                                     <!-- mission-1-start -->
-                                    <div class="isotop-item assets online">
+                                    <div class="isotop-item pro-growth online">
                                         <div class="fillter-item bg-prink">
                                             <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-1">
-                                                <img src="assets/img/work/work-img-1.png" alt="">
+                                                <img src="assets/img/missions/netflix.jpg" alt="Logo Netflix">
                                             </a>
-                                            <span class="item-subtitle">MyDigitalSchool, 01/01/1970</span>
+                                            <span class="item-subtitle">MyDigitalSchool, Janvier 2024</span>
                                             <h6 class="item-title">
-                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-1">Mission 1</a>
+                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-1">Intégration statique Netflix</a>
                                             </h6>
                                         </div>
                                     </div>
                                     <!-- mission-1-end -->
 
+                                    <!-- mission-5-start -->
+                                    <div class="isotop-item pro-growth project-mode support">
+                                        <div class="fillter-item bg-prink">
+                                            <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-5">
+                                                <img src="assets/img/missions/bar.jpg" alt="Bar">
+                                            </a>
+                                            <span class="item-subtitle">MyDigitalSchool, Mai 2024</span>
+                                            <h6 class="item-title">
+                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-5">Application de gestion d'un bar</a>
+                                            </h6>
+                                        </div>
+                                    </div>
+                                    <!-- mission-5-end -->
+
                                     <!-- mission-2-start -->
-                                    <div class=" isotop-item support">
+                                    <div class=" isotop-item assets availability">
                                         <div class="fillter-item bg-catkrill">
                                             <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-2">
-                                                <img src="assets/img/work/work-img-2.png" alt="">
+                                                <img src="assets/img/missions/database.jpg" alt="Bibliothèque">
                                             </a>
-                                            <span class="item-subtitle">XLABS, 01/01/1970</span>
+                                            <span class="item-subtitle">MyDigitalSchool, Mars 2024</span>
                                             <h6 class="item-title">
-                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-2">Mission 2</a>
+                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-2">Création d'une base de données</a>
                                             </h6>
                                         </div>
                                     </div>
                                     <!-- mission-2-end -->
 
                                     <!-- mission-3-start -->
-                                    <div class=" isotop-item assets project-mode">
+                                    <div class=" isotop-item support project-mode availability pro-growth">
                                         <div class="fillter-item bg-catkrill ">
                                             <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-3">
-                                                <img src="assets/img/work/work-img-3.png" alt="">
+                                                <img src="assets/img/missions/glpi.jpg" alt="Tickets">
                                             </a>
-                                            <span class="item-subtitle">GIE MyXlab, 01/01/1970</span>
+                                            <span class="item-subtitle">Xlabs, Octobre 2023</span>
                                             <h6 class="item-title">
-                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-3">Mission 3</a>
+                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-3">Mise en place d'une solution de ticketing</a>
                                             </h6>
                                         </div>
                                     </div>
                                     <!-- mission-3-end -->
-
-                                    <!-- mission-4-start -->
-                                    <div class=" isotop-item online pro-growth">
-                                        <div class="fillter-item bg-prink">
-                                            <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-4">
-                                                <img src="assets/img/work/work-img-4.png" alt="">
-                                            </a>
-                                            <span class="item-subtitle">MyDigitalSchool, 01/01/1970</span>
-                                            <h6 class="item-title">
-                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-4">Mission 4</a>
-                                            </h6>
-                                        </div>
-                                    </div>
-                                    <!-- mission-4-end -->
-
-                                    <!-- mission-5-start -->
-                                    <div class="isotop-item project-mode availability">
-                                        <div class="fillter-item bg-prink">
-                                            <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-5">
-                                                <img src="assets/img/work/work-img-5.png" alt="">
-                                            </a>
-                                            <span class="item-subtitle">XLABS, 01/01/1970</span>
-                                            <h6 class="item-title">
-                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-5">Mission 5</a>
-                                            </h6>
-                                        </div>
-                                    </div>
-                                    <!-- mission-5-end -->
-
+                                    
                                     <!-- mission-6-start -->
-                                    <div class="isotop-item support availability pro-growth">
+                                    <div class="isotop-item online pro-growth">
                                         <div class="fillter-item bg-catkrill">
                                             <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-6">
-                                                <img src="assets/img/work/work-img-6.png" alt="">
+                                                <img src="assets/img/missions/porfolio.jpg" alt="">
                                             </a>
-                                            <span class="item-subtitle">MyXlab 44, 01/01/1970</span>
+                                            <span class="item-subtitle">MyDigitalSchool, Avril 2024 à Mai 2025</span>
                                             <h6 class="item-title">
-                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-6">Mission 6</a>
+                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-6">Création d'un portfolio</a>
                                             </h6>
                                         </div>
                                     </div>
                                     <!-- mission-6-end -->
 
+                                    <!-- mission-4-start -->
+                                    <div class=" isotop-item assets support ">
+                                        <div class="fillter-item bg-prink">
+                                            <a class="img" href="" data-bs-toggle="modal" data-bs-target="#mission-4">
+                                                <img src="assets/img/missions/docker.jpg" alt="Logo Docker">
+                                            </a>
+                                            <span class="item-subtitle">MyDigitalSchool, Novembre 2024</span>
+                                            <h6 class="item-title">
+                                                <a href="" data-bs-toggle="modal" data-bs-target="#mission-4">Création d'un container Docker</a>
+                                            </h6>
+                                        </div>
+                                    </div>
+                                    <!-- mission-4-end -->
+                                    
                                 </div>
                             </div>
                             <!-- mission-items end -->
