--- a/xlabs.html
+++ b/xlabs.html
@@ -106,7 +106,7 @@
                             <!-- img -->
                             <div class="col-lg-4 col-md-8">
                                 <div class="bostami-parsonal-info-img">
-                                    <img src="assets/img/personal-info/xlabs.jpg" alt="">
+                                    <img src="assets/img/presentation/xlabs.jpg" alt="">
                                 </div>
                             </div>
 
@@ -142,7 +142,7 @@
                                                 </div>
                                                 <div class="text">
                                                     <span>Création</span>
-                                                    <p>19??</p>
+                                                    <p>1985</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -218,8 +218,8 @@
                                                     <i class="fa-regular fa-circle-euro"></i>
                                                 </div>
                                                 <div class="text">
-                                                    <span>Chiffre d'affaire (en 2023)</span>
-                                                    <p>1,459,520 €</p>
+                                                    <span>Chiffre d'affaire (en 2022)</span>
+                                                    <p>24,479,000 €</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -305,7 +305,7 @@
                                     </div>
                                     <div class="text">
                                         <h4 class="title">Projets</h4>
-                                        <p>Création de fichiers excel de suivi de projet, maintenance, participation à la prise de rendez-vous et aux réunions avec 
+                                        <p>Création et maintenance de fichiers Excel de suivi de projet, prise de rendez-vous et participation aux réunions avec 
                                             les différents prestataires (Orange Business, Ricoh, MIV)
                                         </p>
                                         <br>
@@ -320,7 +320,7 @@
                                     </div>
                                     <div class="text">
                                         <h4 class="title">Information</h4>
-                                        <p>Diffusion d'informations et sensibilisation des salariés sur différents sujets (par exemple sécurité informatique), notamment via 
+                                        <p>Diffusion d'informations et sensibilisation des salariés sur différents sujets (par exemple la sécurité informatique), notamment via 
                                             les "Café Qualité" et SapaNet, le logiciel Qualité.
                                         </p>
                                     </div>
@@ -335,7 +335,7 @@
                                     <div class="text">
                                         <h4 class="title">Rédaction</h4>
                                         <p>Mise en place d'une PSSI (Politique de sécurité du système d'information) dans le cadre de l'audit COFRAC. Rédaction de procédures 
-                                            afin d'assurer la passation de connaissance.
+                                            afin d'assurer la passation de connaissances.
                                         </p>
                                     </div>
                                 </div>
